src/objects/Address__c.object
<CustomObject><fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Number_of_years__c</fullName>
        <description>Must be greater than 0</description>
        <label>Number of years</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Related_Client_New__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>FormerAddresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Releted_Loan_New__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Loan</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>FormerAddresses</relationshipLabel>
        <relationshipName>FormerAddresses</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Zip__c</fullName>
        <description>Can have only numbers and/or one - (Hyphen)</description>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To check whether the record is active or not</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Address</label><nameField>
        <label>Street Address</label>
        <type>Text</type>
    </nameField><pluralLabel>Addresses</pluralLabel><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><visibility>Public</visibility><listViews>
        <fullName>All_Clients_Former_Addresses</fullName>
        <columns>Related_Client_New__c</columns>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Clients' Former Addresses</label>
    </listViews><validationRules>
        <fullName>Number_of_years_validation</fullName>
        <active>false</active>
        <errorConditionFormula>Number_of_years__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Number_of_years__c</errorDisplayField>
        <errorMessage>Number of years must be greater than 0</errorMessage>
    </validationRules><validationRules>
        <fullName>zip_Address_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( OR(), NOT(REGEX(Zip__c , "\\d{5}(-\\d{4})?")) )</errorConditionFormula>
        <errorDisplayField>Zip__c</errorDisplayField>
        <errorMessage>Can have only numbers and/or one - (Hyphen)</errorMessage>
    </validationRules></CustomObject>